# bpftime-benchmark-arm

./: .dockerignore  .gitignore  Dockerfile.jetson-no-btf  Dockerfile.jetson-v020-no-btf  INSTALL.md  README.md  run_bpftime_arm64_benchmarks.sh  run_x64_syscount_smoke.sh  setup.sh  x64-smoke-workflow.patch
.github/workflows/: arm64-jetson-container-repro.yml  arm64-smoke-benchmarks.yml  arm64-smoke.yml  arm64-ssl-nginx-full.yml  arm64-ssl-nginx-perf-stat.yml  arm64-syscount-nginx-full.yml  arm64-uprobe-full.yml  build-jetson-no-btf-image.yml  docker-jetson-no-btf.yml  official-master-ssl-nginx.yml  official-no-btf-nginx-path-perf-x64.yml  official-no-btf-ssl-nginx-x64.yml  official-no-btf-ssl-nginx.yml  release-full-benchmarks.yml  v020-official-benchmarks.yml  v020-official-ssl-nginx.yml  x64-mpk-full.yml  x64-smoke.yml  x64-ssl-nginx-full.yml  x64-syscall-full.yml  x64-syscount-nginx-full.yml  x64-syscount-smoke.yml  x64-uprobe-full.yml
attach/frida_uprobe_attach_impl/: CMakeLists.txt
attach/syscall_trace_attach_impl/: CMakeLists.txt
benchmark-results/: README.md
benchmark-results/latest/full/docker-2x-20260714/: bpftime-official-no-btf-ssl-run01-20260714_035231.txt  bpftime-official-no-btf-ssl-run01-20260714_134301.txt
benchmark-results/latest/full/host-5x-20260712/: size_benchmark_20260712_053504.txt  size_benchmark_20260712_062111.txt  size_benchmark_20260712_070717.txt  size_benchmark_20260712_075324.txt  size_benchmark_20260712_083932.txt  summary_5runs.txt
benchmark-results/latest/perf/latest-host-bpftime-1kb-perf-20260712_220903/: latest-host-bpftime-1kb-perf-20260712_220903.perf.txt  latest-host-bpftime-1kb-perf-20260712_220903.wrk.txt
benchmark-results/latest/perf/latest-host-kernel-1kb-perf-20260712_221126/: latest-host-kernel-1kb-perf-20260712_221126.perf.txt  latest-host-kernel-1kb-perf-20260712_221126.wrk.txt
benchmark-results/latest/perf/latest-host-kernel-1kb-perf-retry-20260712_221213/: latest-host-kernel-1kb-perf-retry-20260712_221213.perf.txt  latest-host-kernel-1kb-perf-retry-20260712_221213.process.txt  latest-host-kernel-1kb-perf-retry-20260712_221213.wrk.txt
benchmark-results/latest/perf/latest-host-kernel-1kb-perf-user-20260712_221247/: latest-host-kernel-1kb-perf-user-20260712_221247.perf.txt  latest-host-kernel-1kb-perf-user-20260712_221247.wrk.txt
benchmark-results/v0.2.0/figures/: v020-bpftime-throughput-by-payload-notes.txt  v020-bpftime-throughput-by-payload.csv
benchmark-results/v0.2.0/full/docker-5x-20260713/: bpftime-v020-no-btf-ssl-docker-run01-20260713_095352.txt  bpftime-v020-no-btf-ssl-docker-run02-20260713_101406.txt  bpftime-v020-no-btf-ssl-docker-run03-20260713_105929.txt  bpftime-v020-no-btf-ssl-docker-run04-20260713_114531.txt  bpftime-v020-no-btf-ssl-docker-run05-20260713_123134.txt
benchmark-results/v0.2.0/full/docker-hostnet-1x-20260716_190903/: metadata.txt  size_benchmark_20260716_105509.json  size_benchmark_20260716_105509.txt
benchmark-results/v0.2.0/full/host-10x-20260713/: bpftime-v020-no-btf-ssl-host-run01-20260713_014959.txt  bpftime-v020-no-btf-ssl-host-run04-20260713_040801.txt
benchmark-results/v0.2.0/full/host-single-20260712_202038/: README.md  size_benchmark_20260712_202038.json  size_benchmark_20260712_202038.txt
benchmark-results/v0.2.0/full/host-tailscale-off-20260714_162723/: README.md  size_benchmark_20260714_162723.json  size_benchmark_20260714_162723.txt
benchmark-results/v0.2.0/perf/v020-docker-bpftime-1kb-perf-20260712_222632/: v020-docker-bpftime-1kb-perf-20260712_222632.perf.txt  v020-docker-bpftime-1kb-perf-20260712_222632.wrk.txt
benchmark-results/v0.2.0/perf/v020-host-bpftime-1kb-perf-recheck-20260712_223610/: v020-host-bpftime-1kb-perf-recheck-20260712_223610.perf.txt  v020-host-bpftime-1kb-perf-recheck-20260712_223610.wrk.txt
benchmark-results/v0.2.0/perf/v020-host-vs-docker-reader-20260712_223747/: docker-1.perf.txt  docker-1.wrk.txt  docker-2.perf.txt  docker-2.wrk.txt  docker-3.perf.txt  docker-3.wrk.txt  docker-4.perf.txt  docker-4.wrk.txt  docker-5.perf.txt  docker-5.wrk.txt  host-1.perf.txt  host-1.wrk.txt  host-2.perf.txt  host-2.wrk.txt  host-3.perf.txt  host-3.wrk.txt
benchmark/load-latency/: Makefile  benchmark.py  results.md  uprobe.c  victim.c
benchmark/ssl-nginx/: .gitignore  benchmark-logs-10x.txt  benchmark-logs-rerun-128kb-50x.txt  benchmark-logs-rerun-16b-4kb-16kb-3x10-20260625_171316.txt  benchmark-logs-rerun-3sizes-20x.txt  benchmark-logs-rerun-fill-to-50-20260625_183306.txt  benchmark.py  benchmark.py.pre-rerun-20260616_084259  benchmark.py.vm-bak  benchmark.py.vm-bak2  draw_figture.py  draw_figture.py.pre-rerun-20260616_084259  draw_figture.py.vm-bak2  nginx.conf  nginx_path_perf.py  perf_stat_sslsniff.py
benchmark/syscall/: benchmark.py  benchmark.py.vm-bak2  victim.cpp  victim.cpp.vm-bak2
benchmark/syscount-nginx/: benchmark-logs-10x.txt  benchmark.py  benchmark.py.vm-bak2  nginx.conf  reports.md
benchmark/uprobe/: Makefile  benchmark-logs-10x.txt  benchmark.py  uprobe.bpf.c
cmake/: libbpf.cmake  libbpf.cmake.vm-bak  llvm_jit_compat.patch  patch_bpftool_libbpf.py
docker/jetson-repro/: Dockerfile  README.md  run-container.sh
example/libbpf-tools/syscount/: syscount
example/malloc/: victim.c
example/sslsniff/: sslsniff
example/tracing/sslsniff/: Makefile  sslsniff.bpf.c
example/tracing/syscount/: Makefile  syscall_helpers.c
runtime/include/: bpftime_logger.hpp
runtime/src/handler/: perf_event_handler.cpp
runtime/unit-test/: test_software_perf_event.cpp
summry/: 20260723.md  bpftime-software-perf-record-alignment-fix-20260722.md  bpftime-v020-jetson-host-network-validation.md
vm/: CMakeLists.txt
vm/compat/llvm-vm/: compat_llvm.cpp
vm/compat/ubpf-vm/: compat_ubpf.cpp
vm/llvm-jit/: .gitignore  CMakeLists.txt  README.md
vm/llvm-jit/cli/: CMakeLists.txt
vm/llvm-jit/example/ptx/: CMakeLists.txt  ptx_test.cpp
vm/llvm-jit/include/: llvmbpf.hpp
vm/llvm-jit/src/: compiler.cpp  llvm_jit_context.cpp  llvm_jit_context.hpp  vm.cpp
(+220 files in other folders)
